# SH.Cloud

./: .gitignore  .gitmodules  .travis.yml  README.md  UML ServerQueue (1)  UML ServerUsers  UML ServerUsers (2)  ci_build.sh  docker-compose.yml  docker.sh
ServerQueue/: CMakeLists.txt  Dockerfile  client.cpp  echo_server.cpp  init.sql  main.cpp  queue_settings-1.ini  queue_settings-2.ini  queue_settings.ini
ServerQueue/includes/: Server.h  Session.h
ServerQueue/project/headers/: Connection.h  SServer.h  ServerQueue.h  Socket.h
ServerQueue/project/includes/: Server.h  Session.h
ServerQueue/project/src/: Connection.cpp  Database.cpp  SServer.cpp  Server.cpp  ServerQueue.cpp  Session.cpp  Socket.cpp
ServerQueue/src/: Server.cpp  Session.cpp
ServerQueue/tests/: test.cpp
ServerUsers/: CMakeLists.txt  Dockerfile  client.cpp  docker-compose.yml  echo_server.cpp  http_echo_server.cpp  init.sql  main.cpp  test_db.cpp  test_server.cpp
ServerUsers/includes/: Database.h  HandlerUser.h  Session.h  UsersDatabase.h
ServerUsers/project/: tests.cpp
ServerUsers/project/headers/: Connection.h  Parser.h  SServer.h  ServerUser.h  Socket.h
ServerUsers/project/includes/: Database.h  HandlerUser.h  Server.h  Session.h  UsersDatabase.h
ServerUsers/project/src/: Connection.cpp  Database.cpp  HandlerUser.cpp  Parser.cpp  SServer.cpp  Server.cpp  ServerUser.cpp  Session.cpp  Socket.cpp  UsersDatabase.cpp
ServerUsers/src/: Database.cpp  HandlerUser.cpp  Server.cpp  Session.cpp  UsersDatabase.cpp
ServerUsers/tests/: tests_gmock.cpp
auth-server/: CMakeLists.txt  Dockerfile  main.cpp
auth-server/lib/auth-server/: auth-server copy.cpp  auth-server.cpp  auth-server.hpp  data-base-connection.cpp  init.sql  noskoolAuth.ini  requests-handler.cpp  session.cpp
auth-server/tests/: mock_classes.h  tests.cpp
http-server/: CMakeLists 2.txt  CMakeLists.txt  Dockerfile  main.cpp
http-server/lib/http-server/: http-server 2.hpp  http-server.cpp  http-server.hpp  noskoolHTTP.ini  requester.cpp  requesterAuth.cpp  requesterRouter.cpp  requests-handler 2.cpp  requests-handler.cpp  responses-handler.cpp  session.cpp
http-server/tests/: mock_classes 2.h  tests.cpp
server_friends/: CMakeLists.txt  Dockerfile  client_for_tests.cpp  echo_server_for_tests.cpp  friends_settings.ini  init.sql  requests_examples  server_friends_test.cpp  test_bd.cpp
server_friends/include/: connection.h  friends_data_base.h  requst_handler.h  server_friends.h  server_interface.h  session.h  utilty.h
server_friends/src/: connection.cpp  friends_data_base.cpp  request_handler.cpp  server_friends.cpp  server_interface.cpp  session.cpp  utility.cpp
server_friends/tests/: mock_classes.h  test_bd.cpp  test_with_bd.cpp  tests.cpp
server_friends/uml/: server_friends_uml-3.drawio  server_friends_uml.drawio
server_posts/: CMakeLists.txt  Dockerfile  Dokerfile  init.sql  main.cpp
server_posts/include/: connection.h  database.h  handlers.h  post.h  posts_data_base.h  server.h  server_posts.h  server_posts_interface.h  session.h  types.h  utility.h  utility_for_lib.h  utility_parser.h
server_posts/src/: connection.cpp  database.cpp  handlers.cpp  main.cpp  posts_data_base.cpp  server.cpp  server_posts.cpp  server_posts_interface.cpp  session.cpp  utility.cpp  utility_for_lib.cpp  utilty.cpp
server_posts/tests/: gmock_tests.cpp
server_posts/uml/: server_posts_uml.drawio
server_router/: CMakeLists.txt  Dockerfile  client_for_tests.cpp  echo_server_for_tests.cpp  echo_server_for_tests_1.cpp  echo_server_for_tests_2.cpp  router_settings.ini  server_router_for_tests.cpp  test_parser.cpp
server_router/include/: connection.h  server_interface.h  server_router.h  session.h  utilty.h
server_router/src/: connection.cpp  server_interface.cpp  server_router.cpp  session.cpp  utility.cpp
server_router/tests/: mock_classes.h  tests.cpp
server_router/uml/: server_router_uml-3.drawio  server_router_uml.drawio
spa/: package-lock.json  package.json  tsconfig.json  webpack.config.js
spa/src/: index.scss  index.tsx
spa/src/App/: App.tsx  app.scss
spa/src/components/Gallery/: Gallery.tsx  gallery.scss
spa/src/components/Moment/: Moment.tsx  index.ts  moment.scss
spa/src/components/SmallMoment/: SmallMoment.tsx  index.ts  small-moment.scss
spa/src/constants/: header.ts  login-page.ts  profile-card.ts  profile-settings-page.ts  status.ts
spa/src/firebase/: index.ts
spa/src/hooks/: useLike.ts  useModalWindow.ts
spa/src/models/: MomentDto.ts  SmallMomentDto.ts
spa/src/modules/MomentCreatePopup/: MomentCreatePopup.tsx  index.ts  moment-create-popup.scss
spa/src/modules/ProfileCard/: ProfileCard.tsx  profile-card.scss
spa/src/modules/header/: Header.tsx  header.scss
spa/src/pages/: index.ts
spa/src/pages/LoginPage/: LoginPage.tsx  login-page.scss
spa/src/pages/MainPage/: MainPage.tsx  main-page.scss
spa/src/pages/MomentPage/: MomentPage.tsx  moment-page.scss
spa/src/pages/ProfilePage/: ProfilePage.tsx  profile-page.scss
spa/src/pages/ProfileSettingsPage/: ProfileSettingsPage.tsx  profile-settings-page.scss
spa/src/pages/RecomendedPage/: RecomendedPage.tsx  recomended-page.scss
spa/src/pages/SearchPage/: SearchPage.tsx  search-page.scss
spa/src/store/: store.ts
spa/src/store/actions/: userAction.ts
spa/src/store/actionsCreators/: userActionCreator.ts
spa/src/store/reducers/: userReducer.ts
spa/src/types/: common.ts  friends.ts  moments.ts  tokens.ts  user.ts
spa/src/utils/: api.ts
